<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lala.NewAccount"
    tools:showIn="@layout/content_new_account">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_account_cuenta"
        android:hint="@string/account_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_account_cantidad"
        android:hint="@string/current_amount_hint"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/new_account_cuenta"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:numeric="integer|decimal"
        android:inputType="number|numberDecimal" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/new_account_Smoneda"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/spTipoCuenta"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:id="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/new_account_Smoneda"
        android:layout_toStartOf="@+id/new_account_Smoneda"
        android:layout_alignTop="@+id/new_account_Smoneda"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tipo Cuenta"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spTipoCuenta"
        android:layout_toStartOf="@+id/spTipoCuenta"
        android:layout_alignTop="@+id/spTipoCuenta"
        android:textSize="20dp" />


    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/spTipoCuenta"
        android:layout_below="@+id/new_account_cantidad"
        android:layout_alignParentEnd="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_account_Smoneda"
        android:weightSum="2"
        android:layout_marginTop="20dp">

        <Button
            android:background="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/new_account_bGuardar"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/new_account_bCancelar"
            android:background="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />


    </LinearLayout>

</RelativeLayout>
