<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/fragment_activity_moves_swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:id="@+id/linearLayout">
                <Spinner
                    android:id="@+id/spMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/month"
                    android:background="@null"

                    />

                <Spinner
                    android:id="@+id/spYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/spMonth"
                    android:text="@string/year"
                    android:background="@null"
                    />

                <Spinner
                    android:id="@+id/spMoneda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/spYear"
                    android:text="@string/currency"
                    android:background="@null"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_below="@id/linearLayout"
                android:id="@+id/linear2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/income"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/CIngreso"
                    android:text="100.00"
                    android:textAlignment="textEnd"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_below="@id/linear2"
                android:id="@+id/linear3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/outcome"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/CGasto"
                    android:text="-100.00"
                    android:textAlignment="textEnd"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_below="@id/linear3"
                android:id="@+id/linear4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/savings"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/CGanancia"
                    android:text="0.00"
                    android:textAlignment="textEnd"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/Porcentaje"
                    android:text="100%"
                    android:textAlignment="center"
                    android:textColor="#000000"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_below="@id/linear4"
                android:id="@+id/linear1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/motives"
                    android:id="@+id/textView11"
                    android:layout_marginTop="20dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:id="@+id/textView9"
                    android:width="110dp"
                    android:layout_marginTop="20dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/outcome"
                    android:id="@+id/textView10"
                    android:width="110dp"
                    android:layout_marginTop="20dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear1"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>